objects/cic_credit__Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>cic_credit__Credit_Business_Type_Details__c</fullName>
        <description>detailCreditBusinessType</description>
        <label>Credit Business Type Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Business_Type__c</fullName>
        <description>creditBusinessType</description>
        <label>Credit Business Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Inquiry_Date__c</fullName>
        <description>creditInquiryDate</description>
        <label>Credit Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Report</label>
        <referenceTo>cic_credit__Credit_Report__c</referenceTo>
        <relationshipLabel>Inquiries</relationshipLabel>
        <relationshipName>Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Inquiry_Name__c</fullName>
        <description>Actual Name of Inquiry parsed from the JSON.</description>
        <label>Inquiry Name (Report)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Co Borrower</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Source_Type__c</fullName>
        <label>Source Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Source__c</fullName>
        <description>creditRepositorySourceTypeOtherDescription</description>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Inquiry</label>
    <nameField>
        <displayFormat>I-{000000000}</displayFormat>
        <label>Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>